add debt logs
